--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
+browser.id=SL[/Browsers/MicrosoftEdgeBrowser
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+copy.src.target=
 index.file=index.php
 run.as=LOCAL
 url=http://localhost/Assignment3/
